# omni-auth

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  email.rs  lib.rs  main.rs  middleware.rs  redis.rs  webhooks.rs
crates/api/src/routes/: admin.rs  auth.rs  jwks.rs  mfa.rs  mod.rs  oauth.rs  orgs.rs  sessions.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  mfa.rs  oauth.rs  orgs.rs  projects.rs  sessions.rs  tokens.rs  users.rs  webhooks.rs
crates/migrations/migrations/: 0001_init.sql  0002_schema_v2.sql  0003_add_project_api_keys.sql  0004_add_redirect_uris.sql  0005_remove_nil_uuid_seed.sql
crates/verify/: Cargo.toml
crates/verify/src/: lib.rs
docs/: api.md  architecture.md  deployment.md  setup.md
example/my-app/: README.md  next.config.ts  package.json  tsconfig.json
example/my-app/app/: globals.css  layout.tsx  page.tsx
infra/: docker-compose.yml
scripts/: nuke_db.sh  pack-sdk.sh  test_client.sh
sdk/core/: README.md  package.json
sdk/core/src/: client.ts  errors.ts  index.ts  jwt.ts  types.ts
sdk/react/: README.md  package.json  tsconfig.json
sdk/react/src/: context.tsx  index.ts  useEmailVerification.ts  useMfa.ts  useOrgs.ts  usePasswordReset.ts  useSessions.ts
