[workspace]
resolver = "2"
members = ["crates/core", "crates/api", "crates/verify"]

[workspace.package]
authors = ["amitxd"]
edition = "2024"
license = "MIT"
version = "0.0.2"

[workspace.dependencies]
# Local workspace crates
omni-auth-core = { path = "crates/core" }

# Third-party dependencies
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
hex = "0.4.3"
jsonwebtoken = { version = "10.4.0", default-features = false, features = [
    "aws_lc_rs",
] }
rand = { version = "0.10.2", optional = false }
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
ring = "0.17.14"
reqwest = { version = "0.13.4", features = [
    "json",
    "rustls",
    "form",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "tls-rustls",
] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace", "timeout"] }
tower_governor = "0.8.0"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
dotenvy = "0.15.7"
