[package]
name = "omni-auth-api"
version.workspace = true
edition.workspace = true

[dependencies]
omni-auth-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
figment.workspace = true
anyhow.workspace = true
redis.workspace = true
uuid.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
reqwest.workspace = true
chrono.workspace = true
rand.workspace = true
dotenvy.workspace = true
ring.workspace = true
hex.workspace = true
